Max & Monowhales Header Styles

--- a/maxblackmusic.less
+++ b/maxblackmusic.less
@@ -1,1 +1,16 @@
 /* to be uploaded to Wordpress styles */
+
+/* remove default padding at top of content */
+.container_inner{
+  padding-top: 0 !important;
+}
+
+header.centered_logo .q_logo a{
+  height: 180px !important;
+}
+
+.max-header-wrapper{
+  height: 450px;
+}
+
+.max-header-title{
