--- a/maxblackmusic.less
+++ b/maxblackmusic.less
@@ -14,3 +14,18 @@ header.centered_logo .q_logo a{
 }
 
 .max-header-title{
+  text-align: center;
+}
+
+/* Page Header */
+.max-header-title h1{
+  display: inline-block;
+  margin-top: 150px;
+  padding: 6px;
+  background-color: rgba(255,255,255,0.8);
+}
+
+.max-header-socials{
+  margin-top: 40px;
+  text-align: center;
+}
