new splash page

--- a/maxblackmusic.less
+++ b/maxblackmusic.less
@@ -4,10 +4,16 @@
 /* temporarily hide maxblack for band page */
 .page-id-21246{
   header, footer{
-    display: none;
+    display: none !important;
   }
 }
 
+/* hide nav & footer on coming soon page */
+.page-id-21602{
+  nav, footer{
+    display: none !important;
+  }
+}
 
 
 
