new artist page - remove default header and footer

--- a/maxblackmusic.less
+++ b/maxblackmusic.less
@@ -1,8 +1,8 @@
 /* to be uploaded to Wordpress styles */
 
 
-/* temporarily hide maxblack for band page */
-.page-id-21246{
+/* hide maxblack for band page */
+.page-id-21246, .page-id-21699{
   header, footer{
     display: none !important;
   }
