centered social icons

--- a/maxblackmusic.less
+++ b/maxblackmusic.less
@@ -42,9 +42,14 @@ header.centered_logo .q_logo a{
 .max-header-socials{
   margin-top: 40px;
   text-align: center;
+  .q_social_icon_holder{
+    &:last-child{
+      margin-right: 0 !important;
+    }
+  }
 }
 
-/* Band Page (Monowhales) */
+/* Band Pages (Monowhales & Sam Louis) */
 .max-media-feature{
   margin-top: 10px;
 }
